--- a/views/car.pug
+++ b/views/car.pug
@@ -10,8 +10,9 @@ block content
    } 
   div(class='container-fluid')
     div(class='row')
-      each output, index in items
-        div(class='col-sm-3' onclick='buy('+index+')') #{output} 
+    div(class="row row-cols-1 row-cols-sm-4 g-6")
+      each o, index in items
+        div(class="card text-dark bg-warning mb-3" class='col' class='card' class='card-body' class='card-text' onclick='buy('+index+')') #{o}
         
 
   
