--- a/views/car.pug
+++ b/views/car.pug
@@ -2,17 +2,30 @@ extends layout
 
 block content
   h1= title
+  //- - let items = ['car_type','quantity','cost']
   - let items = results;
-  - let output;
+  - let o;
   script.
     function buy(x){
       alert('purchased item ' + x)
    } 
   div(class='container-fluid')
-    div(class='row')
+    a(class="btn btn-primary" href="/car/create") Create
+    div(class='row m-1')
     div(class="row row-cols-1 row-cols-sm-4 g-6")
-      each o, index in items
-        div(class="card text-dark bg-warning mb-3" class='col' class='card' class='card-body' class='card-text' onclick='buy('+index+')') #{o}
-        
+      each item,index in items
+        - let destination = `dispatch(\"/car/update?id=${item._id}\")`
+        - let details = `dispatch(\"/car/detail?id=${item._id}\")` 
+      
+        div(class="card text-white bg-dark mb-3" class='col' class='card' class='card-body' class='card-text' onclick='buy('+index+')') Item #{item.carType}(#{item.carName})is #{item.carCost} 
+          <br><br>
+          span(class="btn btn-info", onclick= details) Details
+          <br>
+          a(class="btn btn-danger", href="/car/delete/?id="+item._id) Delete
+          <br>
+          button.btn( class="btn-success ml-1", onclick= destination) Update
 
-  
+  script.
+    function dispatch(path){
+      window.location.href=path
+    }
