--- a/views/index.pug
+++ b/views/index.pug
@@ -3,14 +3,19 @@ extends layout
 block content
   h1= title
   p Welcome to #{title} Praneeth Kumar Vobilishetty
-  button(type='button',onclick='update()',class='btn btn-success') Press Me
-  div(id="target") text of Display 
+   
   script.
-    let client_count = 0;
+    var client_count = 0;
     function update(){
       client_count +=1;
       document.getElementById("target").innerHTML = "Value now " + client_count;
     }
-  a(href='car') car
-
-
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/car") Take me to car
+    br
+    a(href="/logout") Logout
